# project-os-cockpit

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SNAPSHOT.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: independent-reviewer.md  planner.md
.github/workflows/: validate-docs.yml
desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
desktop/scripts/: copy-assets.mjs  fetch-python.mjs
desktop/src/: main.ts  preload.ts  types.ts  window-state.ts
docs/: ARCHITECTURE.md  DASHBOARD.md  DESIGN.md  GLOSSARY.md  INDEX.md  OWNERSHIP.md  PHASES.md  README.md  STYLEGUIDE.md
docs/__bases__/: CONTEXT.base  Changes.base  Features.base  Issues.base  NAV.base  NAVIGATION.base  Phases.base  README.md  Releases.base  Requirements.base  Risks.base  Tasks.base  Tests.base  Workflows.base
docs/__templates__/: README.md  SCHEMAS.md  adr.md  change.md  dashboard.md  feature.md  issue.md  phase.md  requirement.md  risk.md  task.md  test.md  workflow.md
docs/changes/: CHG-20260507-Auto-Index-Pages.md  CHG-20260507-Bootstrap-Python-Project.md  CHG-20260507-File-Watcher.md  CHG-20260507-Rename-To-Project-Os-Cockpit.md  CHG-20260507-Render-Pipeline-Online.md  CHG-20260507-Wikilink-Resolver.md  CHG-20260508-Backlink-Graph.md  CHG-20260508-Cockpit-Home-And-Library.md  CHG-20260508-Cockpit-Json-Api.md  CHG-20260508-Cockpit-Left-Modes-And-Palette.md  CHG-20260508-Cockpit-Platform-Filter.md  CHG-20260508-Cockpit-Shell-And-Renderer.md  CHG-20260508-SSE-Live-Reload.md  CHG-20260509-Cockpit-Card-Subtitles-And-Bucket-Icons.md  CHG-20260509-Cockpit-Collapsible-Metadata-And-Right-Pane.md  CHG-20260509-Cockpit-Item-Layout-Refinements.md  CHG-20260509-Cockpit-LLM-Drives-Cockpit.md  CHG-20260509-Cockpit-Left-Pane-Toggle.md  CHG-20260509-Cockpit-Library-Refinements.md  CHG-20260509-Cockpit-Nested-Requirements.md  CHG-20260509-Cockpit-Panel-Right-Icon.md  CHG-20260509-Cockpit-Right-Pane-Issue-Severity.md  CHG-20260509-Cockpit-Stacked-Items-Right-Pane-Order-And-Group-Icons.md  CHG-20260509-Index-Bare-Id-Frontmatter-Extraction.md  CHG-20260522-Cockpit-Changes-Hybrid-Buckets.md  CHG-20260522-Cockpit-Changes-Month-Buckets.md  CHG-20260522-Cockpit-Embedded-Terminal.md  CHG-20260522-Cockpit-Exclude-Canonical-Container-Dirs.md  CHG-20260522-Cockpit-Inline-References.md  CHG-20260522-Cockpit-Library-Changes-Group.md  CHG-20260522-Cockpit-Reverse-Proxy-Ttyd.md  CHG-20260522-Cockpit-Sparse-Month-Flat.md  CHG-20260523-Cockpit-Bi-Directional-State.md  CHG-20260523-Cockpit-Soft-Live-Reload.md  CHG-20260524-Desktop-Shell-Runtime-Terminal-Chrome.md  CHG-20260524-Desktop-Shell-Scaffold.md  CHG-20260525-Agent-State-Signal.md  CHG-20260525-Agent-Waiting-Notification.md  CHG-20260525-Cockpit-API-Hardening.md  CHG-20260525-Cockpit-IA-Rework.md  (+48 more)
docs/dashboards/: Changes.md  Features.md  Issues.md  README.md  Releases.md  Requirements.md  Risks.md  Tasks.md  Tests.md  Workflows.md
docs/decisions/: ADR-0001-Custom-Python-Vs-Static-SSG.md  ADR-0002-Terminal-Approach.md  ADR-0003-Visual-Style-Direction.md  README.md  (+2 more)
src/: README.md
tests/: test_agent_actions.py  test_agent_hooks.py  test_agent_state.py  test_check_toggle.py  test_cli_signal.py  test_cockpit.py  test_cockpit_state.py  test_dispatch_ledger.py  test_external_hook.py  test_focus_and_tab_state.py  test_identity_guard.py  test_index.py  test_release.py  test_render_endpoint.py  test_schema_header.py  test_sidecar_contract.py  test_stats_scope.py  test_status_diff.py  test_terminal.py  test_terminal_proxy.py  test_validation.py
tools/: README.md
(+465 files in other folders)
